--- a/sass/partials/_footer.scss
+++ b/sass/partials/_footer.scss
@@ -25,7 +25,7 @@
     transform: rotate(45deg) translate(-20%, -50%);
     position: absolute;
     top: 0;
-    left: 50%;
+    left: 47%;
     @include sm {
       left: 35%;
     }
@@ -374,7 +374,7 @@
           align-items: start;
         }
         &:before {
-          content: '\f101';
+          content: "\f101";
           font-family: $font-awesome;
           font-size: 16px;
           color: $white;
@@ -700,7 +700,7 @@
   .mc4wp-form-255 {
     margin-top: 12px;
     .mc4wp-form-fields {
-      input[type='submit'] {
+      input[type="submit"] {
         padding: 12px 20px;
         background-color: $primary-color;
         color: $white;
