--- a/sass/modules/checknow/_checknow.scss
+++ b/sass/modules/checknow/_checknow.scss
@@ -1,15 +1,15 @@
-input[type='date']::-webkit-calendar-picker-indicator {
+input[type="date"]::-webkit-calendar-picker-indicator {
   opacity: 0;
   pointer-events: none;
 }
 
 /* Firefox */
-input[type='date'] {
+input[type="date"] {
   -moz-appearance: textfield;
 }
 
 /* Internet Explorer */
-input[type='date']::-ms-clear {
+input[type="date"]::-ms-clear {
   display: none;
 }
 .checknow-form {
@@ -54,6 +54,9 @@ input[type='date']::-ms-clear {
       display: flex;
       align-items: center;
       gap: 8px;
+      @include xl {
+        flex: 1;
+      }
       @include rmaxwd(991) {
         flex: 1;
       }
@@ -74,8 +77,8 @@ input[type='date']::-ms-clear {
         line-height: normal;
         letter-spacing: 2.1px;
         width: 290px;
-        @include rmaxwd(991) {
-          width: 100%;
+        @include rmaxwd(1399) {
+          // width: 100%;
         }
       }
       .nice-select {
@@ -96,6 +99,9 @@ input[type='date']::-ms-clear {
       .select-container {
         position: relative;
         display: inline-block;
+        @include xl {
+          flex: 1;
+        }
         @include md {
           flex: 1;
         }
@@ -104,7 +110,7 @@ input[type='date']::-ms-clear {
         }
       }
 
-      .date-container input[type='date'] {
+      .date-container input[type="date"] {
         // padding-left: 35px; /* Space for the icon */
         -webkit-appearance: none;
         -moz-appearance: none;
@@ -118,23 +124,23 @@ input[type='date']::-ms-clear {
         transform: translateY(-50%);
         color: $white;
       }
-      input[type='date']::-webkit-calendar-picker-indicator {
+      input[type="date"]::-webkit-calendar-picker-indicator {
         display: none;
         -webkit-appearance: none;
       }
-      input[type='date']::-webkit-calendar-picker-indicator {
+      input[type="date"]::-webkit-calendar-picker-indicator {
         display: none;
         -webkit-appearance: none;
       }
 
-      input[type='date']::-moz-calendar-picker-indicator {
+      input[type="date"]::-moz-calendar-picker-indicator {
         display: none;
       }
-      input[type='date'] {
+      input[type="date"] {
         -moz-appearance: textfield;
       }
 
-      input[type='date']::-ms-clear {
+      input[type="date"]::-ms-clear {
         display: none;
       }
     }
