--- a/sass/modules/slider/_slider-style-two.scss
+++ b/sass/modules/slider/_slider-style-two.scss
@@ -5,6 +5,7 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
+    overflow: hidden;
     @include rmaxwd(991) {
       padding-top: 100px;
     }
@@ -29,7 +30,7 @@
     }
     .shape-two {
       position: absolute;
-      bottom: 0;
+      bottom: -5px;
       left: 0;
       z-index: 1;
     }
@@ -145,7 +146,7 @@
             overflow: hidden;
             position: relative;
             &:before {
-              content: '';
+              content: "";
               position: absolute;
               width: 100%;
               height: 100%;
