--- a/sass/pages/_home-two.scss
+++ b/sass/pages/_home-two.scss
@@ -264,7 +264,7 @@
       padding: 60px 0;
     }
     &:before {
-      content: '';
+      content: "";
       background-color: rgba(49, 43, 43, 0.8);
       position: absolute;
       left: 0;
@@ -533,7 +533,7 @@
       width: 102%;
 
       &:before {
-        content: '';
+        content: "";
         position: absolute;
         top: 0;
         left: -100%;
@@ -599,14 +599,13 @@
     // Slick Dots
     .slick-dots {
       display: flex;
+      justify-content: center;
       gap: 30px;
-      flex-direction: column;
       transform: translateY(-50%);
       z-index: 20;
-      flex-direction: column;
       margin: 0;
       padding: 0;
-      margin-top: 20px;
+      margin-top: 50px;
 
       @include rmaxwd(1800) {
         right: 5%;
@@ -619,7 +618,7 @@
 
       @include rmaxwd(767) {
         gap: 15px;
-        margin-top: 0;
+        margin-top: 30px;
         transform: translateY(25%);
       }
 
@@ -696,7 +695,7 @@
       position: relative;
     }
     .subscribe-form-widget {
-      max-width: 451px;
+      max-width: 570px;
       width: 100%;
       height: 651px;
       background-color: $black;
@@ -710,9 +709,35 @@
       text-align: center;
       position: absolute;
       top: 0;
+      right: 255px;
+      &:before {
+        content: "";
+        position: absolute;
+        width: 30px;
+        height: 45px;
+        background: #393737;
+        top: -2.5px;
+        left: 0;
+        transform: translate(-17px, 7px) rotate(39deg);
+        z-index: -1;
+      }
+      @include rmaxwd(1700) {
+        right: 100px;
+      }
+      @include rmaxwd(1399) {
+        right: 50px;
+      }
+      @include rmaxwd(991) {
+        right: 12px;
+      }
       @include sm {
         padding: 0 15px;
         max-width: 350px;
+      }
+      .shape {
+        position: absolute;
+        top: 0;
+        left: 0;
       }
       .short-title {
         font-size: 18px;
@@ -739,7 +764,6 @@
         flex-direction: column;
         border-radius: 0;
         gap: 10px;
-        margin-top: 60px;
 
         @include sm {
           justify-content: center;
