--- a/sass/pages/_service-page.scss
+++ b/sass/pages/_service-page.scss
@@ -95,9 +95,9 @@
         letter-spacing: 2.1px;
         background-color: $white;
       }
-      input[type='date'] {
+      input[type="date"] {
         color: #a19292;
-        font-family: 'Barlow Condensed';
+        font-family: "Barlow Condensed";
         font-size: 14px;
         font-style: normal;
         font-weight: 400;
@@ -129,7 +129,7 @@
           }
         }
         &:before {
-          content: '\f107';
+          content: "\f107";
           font-size: 12px;
           position: absolute;
           font-family: $font-awesome;
@@ -168,7 +168,7 @@
         position: relative;
         width: 100%;
 
-        input[type='range'] {
+        input[type="range"] {
           -webkit-appearance: none;
           appearance: none;
           position: absolute;
@@ -226,7 +226,7 @@
 
         cursor: pointer;
 
-        input[type='checkbox'] {
+        input[type="checkbox"] {
           display: none; // Hide the default checkbox
         }
 
@@ -242,7 +242,7 @@
           transition: background-color 0.3s ease, border-color 0.3s ease;
 
           &:after {
-            content: '';
+            content: "";
             position: absolute;
             left: 4px;
             top: 4px;
@@ -257,7 +257,7 @@
           }
         }
 
-        input[type='checkbox']:checked + .checkmark {
+        input[type="checkbox"]:checked + .checkmark {
           background-color: $white; // Brown fill when checked
           border-color: $primary-color;
 
@@ -291,9 +291,6 @@
   &.details-page {
     .tab-slider {
       position: relative;
-      @include sm {
-        margin-bottom: 60px;
-      }
       .tab-btn {
         position: absolute;
         top: 40%;
@@ -328,34 +325,28 @@
         @include rmaxwd(1199) {
           bottom: 80px;
         }
-        @include sm {
-          position: absolute;
-          left: 0;
-          bottom: -50px;
-          width: 100%;
-        }
         li {
           display: flex;
           align-items: center;
           justify-content: center;
-          width: 220px;
+          width: auto;
           height: 150px;
           @include sm {
             height: auto;
             width: 100%;
           }
           button {
-            width: 220px;
-            height: 150px;
+            // width: 220px;
+            // height: 150px;
             font-size: 0;
             padding: 0;
             @include rmaxwd(1199) {
-              width: 60px;
-              height: 60px;
+              // width: 60px;
+              // height: 60px;
             }
             @include sm {
               width: 100%;
-              height: 40px;
+              // height: 40px;
             }
             img {
               width: 100%;
@@ -373,6 +364,9 @@
       display: flex;
       align-items: center;
       gap: 27px;
+      @include sm {
+        gap: 10px;
+      }
       li {
         padding: 14px 20px;
         border: 1px solid #e2c7c7;
@@ -389,6 +383,9 @@
           background-color: $primary-color;
           color: $white;
           @include transition;
+        }
+        @include sm {
+          font-size: 16px;
         }
       }
     }
