--- a/sass/pages/_home-two.scss
+++ b/sass/pages/_home-two.scss
@@ -52,6 +52,7 @@
       }
       @include sm {
         padding: 40px;
+        margin-top: 0;
       }
       .shape {
         position: absolute;
