--- a/sass/modules/checknow/_checknow.scss
+++ b/sass/modules/checknow/_checknow.scss
@@ -138,6 +138,7 @@ input[type="date"]::-ms-clear {
       }
       input[type="date"] {
         -moz-appearance: textfield;
+        // display: none;
       }
 
       input[type="date"]::-ms-clear {
