--- a/css/style.css
+++ b/css/style.css
@@ -81519,6 +81519,12 @@ body.admin-bar .header-area.style-7 {
   line-height: normal;
   text-transform: uppercase;
 }
+@media only screen and (min-width: 0px) and (max-width: 767px) {
+  .slider-area .single-slider .slider-content-wrapper .slider-content .slider-title span {
+    font-size: 24px;
+    line-height: 42px;
+  }
+}
 @media only screen and (min-width: 1200px) and (max-width: 1399px) {
   .slider-area .single-slider .slider-content-wrapper .slider-content .slider-title {
     color: #ffffff;
