add: responsive issue fix

--- a/css/style.css
+++ b/css/style.css
@@ -79149,7 +79149,8 @@ table td#today a {
 .screen-reader-text {
   border: 0;
   clip: rect(1px, 1px, 1px, 1px);
-  clip-path: inset(50%);
+  -webkit-clip-path: inset(50%);
+          clip-path: inset(50%);
   height: 1px;
   margin: -1px;
   overflow: hidden;
@@ -79162,7 +79163,8 @@ table td#today a {
 .screen-reader-text:focus {
   background-color: #eee;
   clip: auto !important;
-  clip-path: none;
+  -webkit-clip-path: none;
+          clip-path: none;
   color: #444;
   display: block;
   font-size: 1em;
@@ -79613,7 +79615,8 @@ figure.wp-block-embed {
 input[type=checkbox],
 input[type=radio] {
   -webkit-appearance: none;
-  appearance: none;
+  -moz-appearance: none;
+       appearance: none;
   margin: 0;
   width: 15px !important;
   height: 15px !important;
@@ -79863,53 +79866,22 @@ ol li a:hover {
 @keyframes MovefadeUp {
   0% {
     opacity: 0;
-    -webkit-transform: translateY(60px);
     transform: translateY(60px);
   }
   100% {
     opacity: 1;
-    -webkit-transform: translateY(0);
     transform: translateY(0);
   }
 }
 .MovefadeUp {
-  -webkit-animation-name: MovefadeUp;
   animation-name: MovefadeUp;
-}
-
-@-webkit-keyframes ripple {
-  70% {
-    -webkit-box-shadow: 0 0 0 30px rgba(255, 255, 255, 0);
-    box-shadow: 0 0 0 30px rgba(255, 255, 255, 0);
-  }
-  100% {
-    -webkit-box-shadow: 0 0 0 0 rgba(255, 255, 255, 0);
-    box-shadow: 0 0 0 0 rgba(255, 255, 255, 0);
-  }
 }
 @keyframes ripple {
   70% {
-    -webkit-box-shadow: 0 0 0 30px rgba(255, 255, 255, 0);
     box-shadow: 0 0 0 30px rgba(255, 255, 255, 0);
   }
   100% {
-    -webkit-box-shadow: 0 0 0 0 rgba(255, 255, 255, 0);
     box-shadow: 0 0 0 0 rgba(255, 255, 255, 0);
-  }
-}
-@-webkit-keyframes pulse {
-  to {
-    box-shadow: 0 0 0 45px rgba(255, 255, 255, 0);
-  }
-}
-@-moz-keyframes pulse {
-  to {
-    box-shadow: 0 0 0 45px rgba(255, 255, 255, 0);
-  }
-}
-@-ms-keyframes pulse {
-  to {
-    box-shadow: 0 0 0 45px rgba(255, 255, 255, 0);
   }
 }
 @keyframes pulse {
@@ -79917,35 +79889,12 @@ ol li a:hover {
     box-shadow: 0 0 0 45px rgba(255, 255, 255, 0);
   }
 }
-@-webkit-keyframes animatelinebar {
-  0% {
-    -webkit-transform: translateX(0px);
-    transform: translateX(0px);
-  }
-  100% {
-    -webkit-transform: translateX(25px);
-    transform: translateX(25px);
-  }
-}
 @keyframes animatelinebar {
   0% {
-    -webkit-transform: translateX(0px);
     transform: translateX(0px);
   }
   100% {
-    -webkit-transform: translateX(25px);
     transform: translateX(25px);
-  }
-}
-@-webkit-keyframes slideUpIn {
-  0% {
-    -webkit-transform: translateY(40px);
-  }
-  100% {
-    -webkit-transform: translateY(0);
-  }
-  0% {
-    -webkit-transform: translateY(40px);
   }
 }
 @keyframes slideUpIn {
@@ -79959,28 +79908,12 @@ ol li a:hover {
     transform: translateY(40px);
   }
 }
-@-webkit-keyframes MoveLeftRight {
-  0% {
-    transform: translateX(0);
-  }
-  100% {
-    transform: translateX(-20px);
-  }
-}
 @keyframes MoveLeftRight {
   0% {
     transform: translateX(0);
   }
   100% {
     transform: translateX(-20px);
-  }
-}
-@-webkit-keyframes MoveUpDown {
-  0% {
-    transform: translateY(0);
-  }
-  100% {
-    transform: translateY(-30px);
   }
 }
 @keyframes MoveUpDown {
@@ -79991,28 +79924,12 @@ ol li a:hover {
     transform: translateY(-30px);
   }
 }
-@-webkit-keyframes Animated3 {
-  0% {
-    transform: translateY(0);
-  }
-  100% {
-    transform: translateY(-20px);
-  }
-}
 @keyframes Animated3 {
   0% {
     transform: translateY(0);
   }
   100% {
     transform: translateY(-20px);
-  }
-}
-@-webkit-keyframes Animated4 {
-  0% {
-    transform: translateX(0);
-  }
-  100% {
-    transform: translateX(-10px);
   }
 }
 @keyframes Animated4 {
@@ -80025,12 +79942,10 @@ ol li a:hover {
 }
 @keyframes UpToDown {
   49% {
-    -webkit-transform: translateY(100%);
     transform: translateY(100%);
   }
   50% {
     opacity: 0;
-    -webkit-transform: translateY(-100%);
     transform: translateY(-100%);
   }
   51% {
@@ -80418,14 +80333,11 @@ ol li a:hover {
 }
 
 .animation {
-  -webkit-animation-duration: 0.3s;
   animation-duration: 0.3s;
-  -webkit-animation-fill-mode: both;
   animation-fill-mode: both;
 }
 
 .slideUpIn {
-  -webkit-animation-name: slideUpIn;
   animation-name: slideUpIn;
 }
 
@@ -81709,43 +81621,32 @@ body.admin-bar .header-area.style-7 {
 .slider-area .slider-wrapper-two .slick-active .slider-short-desc,
 .slider-area .slider-wrapper-two .slick-active .slider-btn-wrapper,
 .slider-area .slider-wrapper-two .slick-active .foundation-text {
-  -webkit-animation-name: MovefadeUp;
   animation-name: MovefadeUp;
   -webkit-animation-fill-mode: both;
 }
 .slider-area .slider-wrapper .slick-active .slider-short-title,
 .slider-area .slider-wrapper-two .slick-active .slider-short-title {
-  -webkit-animation-delay: 0.3s;
   animation-delay: 0.3s;
-  -webkit-animation-duration: 0.3s;
   animation-duration: 0.3s;
 }
 .slider-area .slider-wrapper .slick-active .slider-title,
 .slider-area .slider-wrapper-two .slick-active .slider-title {
-  -webkit-animation-delay: 0.5s;
   animation-delay: 0.5s;
-  -webkit-animation-duration: 0.5s;
   animation-duration: 0.5s;
 }
 .slider-area .slider-wrapper .slick-active .slider-short-desc,
 .slider-area .slider-wrapper-two .slick-active .slider-short-desc {
-  -webkit-animation-delay: 0.7s;
   animation-delay: 0.7s;
-  -webkit-animation-duration: 0.7s;
   animation-duration: 0.7s;
 }
 .slider-area .slider-wrapper .slick-active .slider-btn-wrapper,
 .slider-area .slider-wrapper-two .slick-active .slider-btn-wrapper {
-  -webkit-animation-delay: 0.9s;
   animation-delay: 0.9s;
-  -webkit-animation-duration: 0.9s;
   animation-duration: 0.9s;
 }
 .slider-area .slider-wrapper .slick-active .foundation-text,
 .slider-area .slider-wrapper-two .slick-active .foundation-text {
-  -webkit-animation-delay: 0.9s;
   animation-delay: 0.9s;
-  -webkit-animation-duration: 0.9s;
   animation-duration: 0.9s;
 }
 .slider-area .slider-wrapper .next-btn,
@@ -82161,7 +82062,8 @@ body.admin-bar .header-area.style-7 {
   padding: 0;
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   z-index: -1;
 }
 @media only screen and (min-width: 0px) and (max-width: 767px) {
@@ -82263,7 +82165,8 @@ body.admin-bar .header-area.style-7 {
 @media only screen and (min-width: 0px) and (max-width: 767px) {
   .slider-area.style-4 .image-banner-wrapper .image-banner {
     height: 208px;
-    object-fit: cover;
+    -o-object-fit: cover;
+       object-fit: cover;
   }
 }
 @media (max-width: 991px) {
@@ -82805,7 +82708,6 @@ body.admin-bar .header-area.style-7 {
 .slider-area.style-6 .slick-active .slider-content .slider-title,
 .slider-area.style-6 .slick-active .slider-content .slider-short-desc,
 .slider-area.style-6 .slick-active .slider-content .slider-btn-wrapper {
-  -webkit-animation-name: MovefadeUp;
   animation-name: MovefadeUp;
   -webkit-animation-fill-mode: both;
 }
@@ -83699,7 +83601,8 @@ body.admin-bar .header-area.style-7 {
   height: 100%;
   top: 0;
   left: 0;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   transition: all 0.5s ease-out;
 }
 .about-image-card.style-5 img:hover {
@@ -83949,7 +83852,8 @@ body.admin-bar .header-area.style-7 {
   position: absolute;
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   top: 0;
   left: 0;
 }
@@ -85540,7 +85444,8 @@ body.admin-bar .header-area.style-7 {
 .single-post-item .post-meta .author-img img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   position: absolute;
   top: 0;
   left: 0;
@@ -85608,7 +85513,8 @@ body.admin-bar .header-area.style-7 {
   transform: scale(1);
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   transition: all 0.5s ease-out;
 }
 .post-card .image .circle-btn-wrapper {
@@ -86688,7 +86594,8 @@ body.admin-bar .header-area.style-7 {
   position: absolute;
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   left: 0;
   top: 0;
 }
@@ -88406,7 +88313,8 @@ body.admin-bar .header-area.style-7 {
   width: 100%;
   height: 100%;
   position: absolute;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   top: 0;
   left: 0;
   transform: scale(1.01);
@@ -88951,7 +88859,7 @@ body.admin-bar .header-area.style-7 {
 }
 .latest-comments li .comments-box .comments-avatar {
   float: left;
-  border-radius: 50%;
+  border-radius: 50px;
   overflow: hidden;
   position: relative;
   margin-right: 30px;
@@ -88965,7 +88873,8 @@ body.admin-bar .header-area.style-7 {
 .latest-comments li .comments-box .comments-avatar img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 .latest-comments li .comments-box .comments-text {
   overflow: hidden;
@@ -89103,6 +89012,11 @@ ul.children {
 .comment-respond {
   position: relative;
 }
+@media only screen and (min-width: 0px) and (max-width: 767px) {
+  .comment-respond {
+    margin-top: 0;
+  }
+}
 .comment-respond .title {
   font-family: "Barlow Condensed", sans-serif;
   font-size: 30px;
@@ -89176,22 +89090,9 @@ ul.children {
   font-size: 18px;
   font-weight: 500;
 }
-.comment-respond *::-webkit-input-placeholder {
-  color: #ffffff;
-}
-.comment-respond *:-moz-placeholder {
-  color: #666;
-  opacity: 1;
-}
 .comment-respond *::-moz-placeholder {
   color: #666;
   opacity: 1;
-}
-.comment-respond *:-ms-input-placeholder {
-  color: #666;
-}
-.comment-respond *::-ms-input-placeholder {
-  color: #666;
 }
 .comment-respond *::placeholder {
   color: #808287;
@@ -89216,6 +89117,11 @@ ul.children {
   font-family: "Barlow Condensed", sans-serif !important;
   height: 300px;
   margin-bottom: 0;
+}
+@media only screen and (min-width: 0px) and (max-width: 767px) {
+  .comment-respond textarea {
+    height: 200px;
+  }
 }
 .comment-respond input:focus,
 .comment-respond textarea:focus,
@@ -89776,7 +89682,8 @@ ul.children {
 .video-popup-card .video-popup-image img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 .video-popup-card .video-popup-btn {
   position: absolute;
@@ -89820,9 +89727,6 @@ ul.children {
   font-size: 24px;
 }
 .video-popup-card .video-popup-btn a:hover {
-  -webkit-animation: none;
-  -moz-animation: none;
-  -ms-animation: none;
   animation: none;
 }
 
@@ -90060,7 +89964,8 @@ ul.children {
   width: 100%;
   height: 100%;
   max-width: 100%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   border-radius: 5px;
   transition: all 0.5s ease-out;
 }
@@ -90352,7 +90257,8 @@ ul.children {
   width: 100%;
   height: 100%;
   border-radius: 50%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 .hero-section.style-1 .hero-content .hero-content-bottom .member-count {
   margin-left: 18px;
@@ -90528,7 +90434,8 @@ ul.children {
   left: 0;
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   transform: scale(1.01);
   transition: all 0.5s ease-out;
 }
@@ -90578,11 +90485,6 @@ ul.children {
 
 .about-us-area {
   position: relative;
-}
-@media only screen and (min-width: 0px) and (max-width: 767px) {
-  .about-us-area {
-    padding-bottom: 10px;
-  }
 }
 .about-us-area .outer-shape {
   position: absolute;
@@ -90805,6 +90707,9 @@ ul.children {
   position: relative;
   margin-bottom: 20px;
 }
+.booking-area .booking-form form .form-group .date-container {
+  position: relative;
+}
 .booking-area .booking-form form .form-group label {
   font-size: 16px;
   font-style: normal;
@@ -90814,7 +90719,8 @@ ul.children {
   margin-bottom: 10px;
 }
 .booking-area .booking-form form .form-group input[type=date],
-.booking-area .booking-form form .form-group select {
+.booking-area .booking-form form .form-group select,
+.booking-area .booking-form form .form-group .nice-select {
   width: 100%;
   padding: 12px;
   font-size: 14px;
@@ -90824,11 +90730,13 @@ ul.children {
   color: #616670;
 }
 .booking-area .booking-form form .form-group input[type=date] ::-webkit-input-placeholder,
-.booking-area .booking-form form .form-group select ::-webkit-input-placeholder {
+.booking-area .booking-form form .form-group select ::-webkit-input-placeholder,
+.booking-area .booking-form form .form-group .nice-select ::-webkit-input-placeholder {
   color: #8b2c2c;
 }
 .booking-area .booking-form form .form-group input[type=date]:focus,
-.booking-area .booking-form form .form-group select:focus {
+.booking-area .booking-form form .form-group select:focus,
+.booking-area .booking-form form .form-group .nice-select:focus {
   outline: none;
   border-color: #aa8453;
 }
@@ -90876,6 +90784,11 @@ ul.children {
   }
 }
 
+@media only screen and (min-width: 0px) and (max-width: 767px) {
+  .blog-area {
+    padding-top: 60px;
+  }
+}
 @media only screen and (min-width: 768px) and (max-width: 991px) {
   .blog-area .section-title {
     margin-bottom: 0;
@@ -92597,6 +92510,12 @@ ul.children {
   }
 }
 
+@media only screen and (min-width: 0px) and (max-width: 767px) {
+  .team-area.about-page {
+    padding-bottom: 30px;
+  }
+}
+
 .brand-slider-area.style-2 {
   margin-bottom: 100px;
 }
@@ -92975,6 +92894,12 @@ ul.children {
   }
 }
 
+@media only screen and (min-width: 0px) and (max-width: 767px) {
+  .team-area.about-page {
+    padding-bottom: 30px;
+  }
+}
+
 .brand-slider-area.style-2 {
   margin-bottom: 100px;
 }
@@ -93134,7 +93059,8 @@ ul.children {
 }
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
   .contact-form-area .image-wrapper img {
-    object-fit: cover;
+    -o-object-fit: cover;
+       object-fit: cover;
     height: 100%;
   }
 }
@@ -93306,7 +93232,8 @@ ul.children {
 }
 .list-page-wrapper .sidebar .price-filter .slider-container input[type=range] {
   -webkit-appearance: none;
-  appearance: none;
+  -moz-appearance: none;
+       appearance: none;
   position: absolute;
   width: 100%;
   height: 3px;
@@ -93966,7 +93893,8 @@ ul.children {
   height: 100%;
   top: 0;
   left: 0;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   transition: all 0.5s ease-out;
 }
 @media only screen and (min-width: 768px) and (max-width: 991px) {
@@ -94236,7 +94164,8 @@ ul.children {
   }
 }
 .footer-widget .footer-widget-info .footer-logo a img {
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 .footer-widget .footer-widget-info .info-form-and-social-icon {
   display: flex;
@@ -94595,22 +94524,9 @@ ul.children {
   background: #322e2e;
   border-right: 0;
 }
-.subscribe-form-widget .single-field *::-webkit-input-placeholder {
-  color: #808287;
-}
-.subscribe-form-widget .single-field *:-moz-placeholder {
-  color: #808287;
-  opacity: 1;
-}
 .subscribe-form-widget .single-field *::-moz-placeholder {
   color: #808287;
   opacity: 1;
-}
-.subscribe-form-widget .single-field *:-ms-input-placeholder {
-  color: #808287;
-}
-.subscribe-form-widget .single-field *::-ms-input-placeholder {
-  color: #808287;
 }
 .subscribe-form-widget .single-field *::placeholder {
   color: #808287;
@@ -95045,7 +94961,8 @@ input[type=date]::-ms-clear {
 .checknow-form .inner-wrapper {
   padding: 20px;
   background-color: rgba(63, 63, 63, 0.5);
-  backdrop-filter: blur(2px);
+  -webkit-backdrop-filter: blur(2px);
+          backdrop-filter: blur(2px);
 }
 .checknow-form form {
   display: flex;
@@ -95213,7 +95130,8 @@ input[type=date]::-ms-clear {
   appearance: none;
 }
 .checknow-form.styel-2 .inner-wrapper {
-  backdrop-filter: blur(0);
+  -webkit-backdrop-filter: blur(0);
+          backdrop-filter: blur(0);
 }
 .checknow-form.styel-2 .inner-wrapper .date-container i {
   color: #a19292;
@@ -95259,8 +95177,10 @@ input[type=date]::-ms-clear {
 .room-card:hover .content-wrapper, .room-card.slick-center .content-wrapper {
   height: 50%;
   bottom: 0;
-  clip-path: polygon(50% 0, 50% 0, 100% 20%, 100% 100%, 0 100%, 0 20%);
-  backdrop-filter: blur(10px);
+  -webkit-clip-path: polygon(50% 0, 50% 0, 100% 20%, 100% 100%, 0 100%, 0 20%);
+          clip-path: polygon(50% 0, 50% 0, 100% 20%, 100% 100%, 0 100%, 0 20%);
+  -webkit-backdrop-filter: blur(10px);
+          backdrop-filter: blur(10px);
   transition: all 0.5s ease-out;
 }
 .room-card:hover .content-wrapper .inner-wrapper, .room-card.slick-center .content-wrapper .inner-wrapper {
@@ -95279,7 +95199,8 @@ input[type=date]::-ms-clear {
   height: 100%;
   bottom: 0;
   transition: height 0.5s ease-out;
-  clip-path: none;
+  -webkit-clip-path: none;
+          clip-path: none;
   color: #ffffff;
   width: 100%;
   background: rgba(34, 34, 34, 0.75);
@@ -95451,7 +95372,8 @@ input[type=date]::-ms-clear {
 }
 .room-card.style-3:hover .content-wrapper {
   height: 100%;
-  clip-path: none;
+  -webkit-clip-path: none;
+          clip-path: none;
 }
 @media only screen and (min-width: 0px) and (max-width: 767px) {
   .room-card.style-3 {
@@ -95525,9 +95447,11 @@ input[type=date]::-ms-clear {
 }
 .room-card.styel-5:hover .content-wrapper {
   height: 100%;
-  clip-path: none;
+  -webkit-clip-path: none;
+          clip-path: none;
   filter: unset;
-  backdrop-filter: blur(0);
+  -webkit-backdrop-filter: blur(0);
+          backdrop-filter: blur(0);
 }
 .room-card.styel-5 .content-wrapper .inner-wrapper {
   bottom: 30px;
@@ -95731,4 +95655,24 @@ input[type=date]::-ms-clear {
 }
 .blog-card.style-3 .content-wrapper .title-wrapper .user-meta ul li i {
   color: #aa8453;
+}
+
+input[type=date] {
+  -moz-appearance: textfield;
+  position: relative;
+  z-index: 1;
+}
+
+/* Optional: style adjustments for the custom icon */
+#calendar-icon {
+  position: absolute;
+  right: 10px; /* Adjust as needed */
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 2;
+  pointer-events: none;
+}
+
+.date-input {
+  -moz-appearance: textfield;
 }/*# sourceMappingURL=style.css.map */
