--- a/sass/modules/_comment-list.scss
+++ b/sass/modules/_comment-list.scss
@@ -172,7 +172,7 @@
       //}
       .comments-avatar {
         float: left;
-        border-radius: 50%;
+        border-radius: 50px;
         overflow: hidden;
         position: relative;
         margin-right: 30px;
