--- a/sass/modules/_comment-form.scss
+++ b/sass/modules/_comment-form.scss
@@ -46,6 +46,9 @@
 }
 .comment-respond {
   position: relative;
+  @include sm {
+    margin-top: 0;
+  }
   .title {
     font-family: $body-font;
     font-size: 30px;
@@ -99,7 +102,7 @@
   .comment-form-cookies-consent {
     display: none;
   }
-  input[type="number"] {
+  input[type='number'] {
     -webkit-appearance: textfield;
     -moz-appearance: textfield;
     appearance: textfield;
@@ -118,7 +121,7 @@
     line-height: 29px;
     background-color: #f6f6f6;
   }
-  input[type="submit"] {
+  input[type='submit'] {
     height: 70px;
     background-color: $primary-color;
     border-color: $primary-color;
@@ -167,6 +170,9 @@
     font-family: $body-font !important;
     height: 300px;
     margin-bottom: 0;
+    @include sm {
+      height: 200px;
+    }
   }
   input:focus,
   textarea:focus,
