--- a/sass/pages/_home-one.scss
+++ b/sass/pages/_home-one.scss
@@ -412,7 +412,7 @@
 .about-us-area {
   position: relative;
   @include sm {
-    padding-bottom: 10px;
+    // padding-bottom: 10px;
   }
   .outer-shape {
     position: absolute;
@@ -605,6 +605,9 @@
         position: relative;
         margin-bottom: 20px;
 
+        .date-container {
+          position: relative;
+        }
         label {
           font-size: 16px;
           font-style: normal;
@@ -614,8 +617,9 @@
           margin-bottom: 10px;
         }
 
-        input[type="date"],
-        select {
+        input[type='date'],
+        select,
+        .nice-select {
           width: 100%;
           padding: 12px;
           font-size: 14px;
@@ -684,6 +688,9 @@
 
 // Blog area
 .blog-area {
+  @include sm {
+    padding-top: 60px;
+  }
   .section-title {
     @include md {
       margin-bottom: 0;
@@ -848,7 +855,7 @@
     background: none;
   }
   &:before {
-    content: "";
+    content: '';
     position: absolute;
     top: 0;
     left: 0;
