add: checknow and booking form date picker icon hide issue

--- a/sass/modules/checknow/_checknow.scss
+++ b/sass/modules/checknow/_checknow.scss
@@ -1,15 +1,15 @@
-input[type="date"]::-webkit-calendar-picker-indicator {
+input[type='date']::-webkit-calendar-picker-indicator {
   opacity: 0;
   pointer-events: none;
 }
 
 /* Firefox */
-input[type="date"] {
+input[type='date'] {
   -moz-appearance: textfield;
 }
 
 /* Internet Explorer */
-input[type="date"]::-ms-clear {
+input[type='date']::-ms-clear {
   display: none;
 }
 .checknow-form {
@@ -26,6 +26,9 @@ input[type="date"]::-ms-clear {
     padding: 30px;
     padding-bottom: 40px;
     background-color: #3f3f3f;
+    @include rmaxwd(1700) {
+      gap: 10px;
+    }
     @include sm {
       gap: 20px;
     }
@@ -54,11 +57,14 @@ input[type="date"]::-ms-clear {
       display: flex;
       align-items: center;
       gap: 8px;
+      flex: 1;
       @include xl {
+      }
+      @include lg {
         flex: 1;
       }
       @include rmaxwd(991) {
-        flex: 1;
+        flex: auto;
       }
       @include sm {
         flex-direction: column;
@@ -76,16 +82,16 @@ input[type="date"]::-ms-clear {
         font-weight: 400;
         line-height: normal;
         letter-spacing: 2.1px;
-        width: 290px;
+        // width: 290px;
+        width: 100%;
         @include rmaxwd(1399) {
-          width: 100%;
         }
       }
       .nice-select {
-        width: 290px;
-        @include rmaxwd(991) {
-          width: 100%;
-        }
+        // width: 290px;
+        // @include rmaxwd(991) {
+        //   width: 100%;
+        // }
       }
       label {
         color: $white;
@@ -94,7 +100,9 @@ input[type="date"]::-ms-clear {
         font-weight: 400;
         line-height: 29px; /* 181.25% */
         text-transform: uppercase;
+        white-space: nowrap;
       }
+
       .date-container,
       .select-container {
         position: relative;
@@ -110,39 +118,39 @@ input[type="date"]::-ms-clear {
         }
       }
 
-      .date-container input[type="date"] {
-        // padding-left: 35px; /* Space for the icon */
-        -webkit-appearance: none;
-        -moz-appearance: none;
-        appearance: none;
-      }
+      .datepicker {
+        position: relative;
+        width: 100%;
 
-      .date-container i {
-        position: absolute;
-        right: 10px;
-        top: 50%;
-        transform: translateY(-50%);
-        color: $white;
-      }
-      input[type="date"]::-webkit-calendar-picker-indicator {
-        display: none;
-        -webkit-appearance: none;
-      }
-      input[type="date"]::-webkit-calendar-picker-indicator {
-        display: none;
-        -webkit-appearance: none;
-      }
+        i {
+          position: absolute;
+          right: 10px; // Adjust as needed
+          top: 50%;
+          transform: translateY(-50%);
+          z-index: 2;
+          pointer-events: none;
+          color: #a19292;
+        }
 
-      input[type="date"]::-moz-calendar-picker-indicator {
-        display: none;
-      }
-      input[type="date"] {
-        -moz-appearance: textfield;
-        // display: none;
-      }
+        input {
+          width: 100%;
+          padding: 16px 20px;
+          background-color: #564848;
+          color: #a19292;
+          font-family: 'Barlow Condensed', sans-serif;
+          font-size: 14px;
+          font-style: normal;
+          font-weight: 400;
+          line-height: normal;
+          letter-spacing: 2.1px;
 
-      input[type="date"]::-ms-clear {
-        display: none;
+          &[type='date'] {
+            position: absolute;
+            inset: 0;
+            z-index: -1;
+            opacity: 0;
+          }
+        }
       }
     }
     button {
