--- a/css/style.css
+++ b/css/style.css
@@ -90707,8 +90707,31 @@ ul.children {
   position: relative;
   margin-bottom: 20px;
 }
-.booking-area .booking-form form .form-group .date-container {
+.booking-area .booking-form form .form-group .datepicker {
   position: relative;
+}
+.booking-area .booking-form form .form-group .datepicker #calendar-icon {
+  position: absolute;
+  right: 10px;
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 2;
+  pointer-events: none;
+}
+.booking-area .booking-form form .form-group .datepicker input {
+  width: 100%;
+  padding: 12px;
+  font-size: 14px;
+  border: 1px solid transparent;
+  border-radius: 5px;
+  background-color: #f6f6f6;
+  color: #616670;
+}
+.booking-area .booking-form form .form-group .datepicker input[type=date] {
+  position: absolute;
+  inset: 0;
+  z-index: -1;
+  opacity: 0;
 }
 .booking-area .booking-form form .form-group label {
   font-size: 16px;
@@ -90739,15 +90762,6 @@ ul.children {
 .booking-area .booking-form form .form-group .nice-select:focus {
   outline: none;
   border-color: #aa8453;
-}
-.booking-area .booking-form form .form-group i {
-  display: inline-block;
-  position: absolute;
-  right: 15px;
-  top: 50%;
-  transform: translateY(60%);
-  background-color: #f6f6f6;
-  color: #a19292;
 }
 .booking-area .booking-form form .submit-btn {
   background-color: #aa8453;
@@ -91782,18 +91796,6 @@ ul.children {
 }
 .checknow-form.styel-2 .inner-wrapper form {
   box-shadow: 0px 4px 20px 0px rgba(234, 234, 234, 0.3);
-}
-@media only screen and (min-width: 768px) and (max-width: 991px) {
-  .checknow-form.styel-2 .inner-wrapper form .input-wrapper,
-  .checknow-form.styel-2 .inner-wrapper form button {
-    flex: 1;
-  }
-}
-@media only screen and (min-width: 0px) and (max-width: 767px) {
-  .checknow-form.styel-2 .inner-wrapper form .input-wrapper,
-  .checknow-form.styel-2 .inner-wrapper form button {
-    flex: 1;
-  }
 }
 @media (max-width: 991px) {
   .checknow-form.styel-2 .inner-wrapper form .date-container {
@@ -94973,6 +94975,11 @@ input[type=date]::-ms-clear {
   padding-bottom: 40px;
   background-color: #3f3f3f;
 }
+@media (max-width: 1700px) {
+  .checknow-form form {
+    gap: 10px;
+  }
+}
 @media only screen and (min-width: 0px) and (max-width: 767px) {
   .checknow-form form {
     gap: 20px;
@@ -95003,15 +95010,16 @@ input[type=date]::-ms-clear {
   display: flex;
   align-items: center;
   gap: 8px;
+  flex: 1;
 }
-@media only screen and (min-width: 1200px) and (max-width: 1399px) {
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
   .checknow-form form .input-wrapper {
     flex: 1;
   }
 }
 @media (max-width: 991px) {
   .checknow-form form .input-wrapper {
-    flex: 1;
+    flex: auto;
   }
 }
 @media only screen and (min-width: 0px) and (max-width: 767px) {
@@ -95032,21 +95040,7 @@ input[type=date]::-ms-clear {
   font-weight: 400;
   line-height: normal;
   letter-spacing: 2.1px;
-  width: 290px;
-}
-@media (max-width: 1399px) {
-  .checknow-form form .input-wrapper input,
-  .checknow-form form .input-wrapper select {
-    width: 100%;
-  }
-}
-.checknow-form form .input-wrapper .nice-select {
-  width: 290px;
-}
-@media (max-width: 991px) {
-  .checknow-form form .input-wrapper .nice-select {
-    width: 100%;
-  }
+  width: 100%;
 }
 .checknow-form form .input-wrapper label {
   color: #ffffff;
@@ -95055,6 +95049,7 @@ input[type=date]::-ms-clear {
   font-weight: 400;
   line-height: 29px; /* 181.25% */
   text-transform: uppercase;
+  white-space: nowrap;
 }
 .checknow-form form .input-wrapper .date-container,
 .checknow-form form .input-wrapper .select-container {
@@ -95079,34 +95074,36 @@ input[type=date]::-ms-clear {
     width: 100%;
   }
 }
-.checknow-form form .input-wrapper .date-container input[type=date] {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
+.checknow-form form .input-wrapper .datepicker {
+  position: relative;
+  width: 100%;
 }
-.checknow-form form .input-wrapper .date-container i {
+.checknow-form form .input-wrapper .datepicker i {
   position: absolute;
   right: 10px;
   top: 50%;
   transform: translateY(-50%);
-  color: #ffffff;
+  z-index: 2;
+  pointer-events: none;
+  color: #a19292;
 }
-.checknow-form form .input-wrapper input[type=date]::-webkit-calendar-picker-indicator {
-  display: none;
-  -webkit-appearance: none;
+.checknow-form form .input-wrapper .datepicker input {
+  width: 100%;
+  padding: 16px 20px;
+  background-color: #564848;
+  color: #a19292;
+  font-family: "Barlow Condensed", sans-serif;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  letter-spacing: 2.1px;
 }
-.checknow-form form .input-wrapper input[type=date]::-webkit-calendar-picker-indicator {
-  display: none;
-  -webkit-appearance: none;
-}
-.checknow-form form .input-wrapper input[type=date]::-moz-calendar-picker-indicator {
-  display: none;
-}
-.checknow-form form .input-wrapper input[type=date] {
-  -moz-appearance: textfield;
-}
-.checknow-form form .input-wrapper input[type=date]::-ms-clear {
-  display: none;
+.checknow-form form .input-wrapper .datepicker input[type=date] {
+  position: absolute;
+  inset: 0;
+  z-index: -1;
+  opacity: 0;
 }
 .checknow-form form button {
   padding: 9.5px 40px;
@@ -95655,24 +95652,4 @@ input[type=date]::-ms-clear {
 }
 .blog-card.style-3 .content-wrapper .title-wrapper .user-meta ul li i {
   color: #aa8453;
-}
-
-input[type=date] {
-  -moz-appearance: textfield;
-  position: relative;
-  z-index: 1;
-}
-
-/* Optional: style adjustments for the custom icon */
-#calendar-icon {
-  position: absolute;
-  right: 10px; /* Adjust as needed */
-  top: 50%;
-  transform: translateY(-50%);
-  z-index: 2;
-  pointer-events: none;
-}
-
-.date-input {
-  -moz-appearance: textfield;
 }/*# sourceMappingURL=style.css.map */
